Make description files
Descriptions are now made using make_description, which is
make_workshop_description and make_manifest_description combined due to
the large amount of shared code. They are also generated when making a
new pack.

Delimiters in all .ini files have also been changed from colons to equal
signs, to fit with the configparser defaults. This way, packs saved by
save_exisiting_pack_to_database won't look incorrect

--- a/existing pack.ini
+++ b/existing pack.ini
@@ -1,11 +1,11 @@
 # all lists separated,by,commas
 [info]
-game:
-pack:
+game = 
+pack = 
 
 [add vehicles]
 
 
 [description]
-workshop desc: true
-manifest desc: true
+workshop desc = true
+manifest desc = true
