Rename Paintjob Tracker file
The Paintjob Tracker file has been renamed to match the naming
conventions of the rest of the project

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@
 .DS_Store
 library/placeholder files/ats templates/
 library/placeholder files/ets templates/
-library/paintjob-tracker.txt
+library/paintjob tracker.txt
