--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,19 @@
 .DS_Store
 templates/
 library/paint-job-tracker.txt
+
+# Godot 4+ specific ignores
+.godot/
+
+# Godot-specific ignores
+.import/
+export.cfg
+export_presets.cfg
+
+# Imported translations (automatically generated from CSV files)
+*.translation
+
+# Mono-specific ignores
+.mono/
+data_*/
+mono_crash.*.json
